--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react-dom": "^17.0.1",
     "react-globe.gl": "^2.14.6",
     "react-scripts": "^4.0.3",
-    "react-xml-parser": "^1.1.8",
-    "use-ipcoords": "^1.0.11"
+    "react-xml-parser": "^1.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
